# PicoVoiceImplementations

./: README.md
CIFG/: README.md  THEORY.md  driverNotebook.ipynb  modelCIFG.py  requirements.txt  test_model.py
CStack/: .gitignore  CMakeLists.txt  README.md  general_stack.c
CStack/src/: main.c  unittest.c
CStack/src/include/: stack.h
CStack/src/lib/: stack.c
patternMatcher/: README.md  patternMatcher.py  requirements.txt  test.txt  unitRead.py
